# esp32_c6_playground

./: .gitignore  .gitmodules  Cargo.toml  rust-toolchain.toml  sd_init.pvs  sd_init.sr
.cargo/: config.toml
micro_sd_test.ino/: micro_sd_test.ino.ino
src/: experiment.rs  main.rs  wasm.rs
