[package]
name = "esp32_c6_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2"

#[dependencies.wat]
#version = "1.0.66"
#default-features = false
#features = []

[dependencies.wasmi]
version = "0.30.0"
default-features = false


#[dependencies.rgb-led]
#path = "../std-training/common/lib/rgb-led"

[dependencies.esp32c6-hal]
version = "0.2.0"
#features = [""]

[dependencies.esp-alloc]
version = "0.3.0"

[dependencies.esp-backtrace]
version = "0.7.0"
features = ["esp32c6", "panic-handler", "exception-handler", "esp-println", "print-uart"]

[dependencies.esp-println]
version = "0.5.0"
default-features = false
features = ["esp32c6", "uart", "colors", "critical-section"]

[package.metadata.espflash]
bootloader = "bootloader.bin" # Must be a binary file
partition_table = "partitions.csv" # Supports CSV and binary formats
#format          = "direct-boot"    # Can be 'esp-bootloader' or 'direct-boot'
format = "esp-bootloader"    # Can be 'esp-bootloader' or 'direct-boot'
