[package]
name = "esp32_c6_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#libm = "0.2"
#smart-leds = "0.3.0"
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.5.0"
embedded-hal = "0.2.7"
switch-hal = "*"
#smoltcp = { version = "0.9.1", default-features = false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
#log = "0.4.17"
heapless = { version = "0.7.14", default-features = false }

[dependencies.sdmmc-spi]
#path = "../sdmmc-spi"
version = "0.1.1"
#features = [""]

[dependencies.defmt]
version = "0.3.2"
default-features = false
features = ["encoding-raw"]

[dependencies.defmt-serial]
version = "0.6.0"
#features = [""]
#version = "0.3.5"
#features = [""]

#[dependencies.esp-wifi-sys]
#git = "https://github.com/esp-rs/esp-wifi/"
#features = ["esp32c6"]


#[dependencies.esp-wifi]
#git = "https://github.com/esp-rs/esp-wifi/"
#features = ["esp32c6", "utils", "enumset", "wifi", "wifi-logs", "ps-min-modem"]

#[dependencies.esp-hal-smartled]
#version = "0.4.0"
#features = ["esp32c6"]

#[dependencies.wat]
#version = "1.0.66"
#default-features = false
#features = []

#[dependencies.wasmi]
#version = "0.30.0"
#default-features = false


#[dependencies.rgb-led]
#path = "esp-rs-std-training/common/lib/rgb-led"

[dependencies.esp32c6-hal]
version = "0.4.0"
features = ["eh1"]

[dependencies.esp-alloc]
version = "0.3.0"

[dependencies.esp-backtrace]
version = "0.7.0"
features = ["esp32c6", "panic-handler", "exception-handler", "esp-println", "print-uart"]

[dependencies.esp-println]
version = "0.5.0"
default-features = false
features = ["esp32c6", "uart", "colors", "critical-section", "log"]

[package.metadata.espflash]
bootloader = "bootloader.bin" # Must be a binary file
partition_table = "partitions.csv" # Supports CSV and binary formats
#format          = "direct-boot"    # Can be 'esp-bootloader' or 'direct-boot'
format = "esp-bootloader"    # Can be 'esp-bootloader' or 'direct-boot'
